# Word-Memorizer-v3

./: .gitignore  README.md  check_dependencies.sh  install_deps.sh  resolve-merge.sh  start.sh  style.css  word_memorizer
backend/: CMakeLists.txt
backend/resources/web-ui/: index.html
backend/resources/web-ui/assets/: LearningView-f3677fc4.css  SettingsView-10f08e2f.css  SettingsView-3b69f022.js
backend/src/: main.cpp
backend/src/bridge/: MessageHandler.cpp  MessageHandler.h  WebViewBridge.cpp  WebViewBridge.h
backend/src/core/: SettingsManager.cpp  SettingsManager.h  WDLSTParser.cpp  WDLSTParser.h  WordManager.cpp  WordManager.h
backend/src/ui/: MainWindow.cpp  MainWindow.h
data/: WL 07.txt  WL 08.txt  sample_words.txt  test.wdlst
frontend/: docker-build.sh  fix_dialog.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.js.old  vite.config.js
frontend/settings/: app.config.js  constants.js  theme.config.js
frontend/src/: App.vue  App.vue.backup  main.js
frontend/src/assets/css/: main.css  main.css.backup  main.css.backup.final
frontend/src/components/: DialogSystem.vue  LearningView.vue  ProgressBar.vue  SettingsView.vue  WordCard.vue  WordEditDialog.vue  WordManagerView.vue
frontend/src/router/: index.js
frontend/src/stores/: settings.js  theme.js  word.js
frontend/src/utils/: bridge.js  theme.js
src-old/: AboutDialog.cpp  AboutDialog.h  DerivativeQuizDialog.cpp  DerivativeQuizDialog.h  SettingsDialog.cpp  SettingsDialog.h  UsageDialog.cpp  UsageDialog.h  WordEditorDialog.cpp  WordManagerDialog.cpp
(+8 files in other folders)
